# hs-openfaas

./: .gitignore  CHANGELOG.md  README.md  cabal.project  default-nix.nix  default.nix  openfaas.cabal  project.yml  shell.nix  shell2.nix  sls2.cabal
.github/workflows/: main.yml  nix.yml.disabled
lib/Network/DigitalOcean/CloudFunctions/: Handler.hs  Request.hs  Response.hs
src/: Main.hs
