cabal-version:      3.4
name:               openfaas
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Dan Dart
maintainer:         git@dandart.co.uk
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -static

library
    import:           warnings
    exposed-modules:  MyHandler
                    , Network.DigitalOcean.CloudFunctions.Handler
                    , Network.DigitalOcean.CloudFunctions.Request
                    , Network.DigitalOcean.CloudFunctions.Response
    build-depends:    base >= 4.17.0.0
                    , aeson
                    , bytestring
                    , containers
                    , text
    hs-source-dirs:   lib
    default-language: GHC2021
    default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost

executable openfaas
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.17.0.0
      , aeson
      , bytestring
      , openfaas
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost

test-suite openfaas-test
    import:           warnings
    default-language: GHC2021
    default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4.17.0.0,
        bytestring,
        openfaas
