cabal-version:   3.4
name:            openfaas
version:         0.1.0.0
license:         GPL-3.0-only
license-file:    LICENSE
author:          Dan Dart
maintainer:      git@dandart.co.uk
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -static

library
  import:             warnings
  exposed-modules:
    Network.DigitalOcean.CloudFunctions.Handler
    Network.DigitalOcean.CloudFunctions.Request
    Network.DigitalOcean.CloudFunctions.Response

  build-depends:
    , aeson
    , base        >=4.20.0.0
    , bytestring
    , containers
    , text

  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions:
    UnicodeSyntax

test-suite openfaas-test
  import:             warnings
  default-language:   GHC2024
  default-extensions:
    UnicodeSyntax
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , base        >=4.20.0.0
    , bytestring
    , hspec
    , openfaas
  build-tool-depends: hspec-discover:hspec-discover
